[project]
name = "backend"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.88.0",
    "langgraph>=1.1.5",
    "psycopg2-binary>=2.9.11",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--ignore=backend/tests/infrastructure"
