[project]
name = "backend"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.88.0",
    "fastapi>=0.135.3",
    "fastmcp>=3.2.3",
    "httpx>=0.28.1",
    "langfuse>=4.0.6",
    "langgraph>=1.1.5",
    "openai>=2.31.0",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.26",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--ignore=backend/tests/infrastructure"
